tests/fixtures/invalid/hex_3_args.py
# hex() takes at most 1 argument, got 3
x = hex(1, 1, 1)
